[package]
name = "bili-dl"
version = "0.1.0"
edition = "2024"
description = "使用deepseek参照yt-dlp构建的b站视频下载器"
authors = ["dmqf dmqf12@gmail.com"]
license = "LGPL"
repository = "https://github.com/dmqf12/bili-dl"

[[bin]]
path = "src/bin/bili-dl.rs"
name = "bili-dl"

[dependencies]
reqwest = { version = "0.13.3", features = ["query", "json", "rustls", "stream", "gzip", "deflate", "brotli", "cookies"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.11"
url = "2"
anyhow = "1"
regex = "1"
futures-util = "0.3"
